This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: _PyLong_FormatAdvancedWriter has an unnecessary str
Type: Stage: resolved
Components: Interpreter Core Versions:
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: benjamin.peterson, petdance
Priority: normal Keywords: patch

Created on 2020-02-29 19:19 by petdance, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 18709 merged petdance, 2020-02-29 19:33
Messages (2)
msg363006 - (view) Author: Andy Lester (petdance) * Date: 2020-02-29 19:19
_PyLong_FormatAdvancedWriter has a PyObject *str that is never used.  Remove it.
msg363097 - (view) Author: Benjamin Peterson (benjamin.peterson) * (Python committer) Date: 2020-03-01 21:26
New changeset 3fe9117779f0c75f7a0c3d7748c5bf281fbc1e4c by Andy Lester in branch 'master':
closes bpo-39803: Remove unused str from _PyLong_FormatAdvancedWriter. (GH-18709)
https://github.com/python/cpython/commit/3fe9117779f0c75f7a0c3d7748c5bf281fbc1e4c
History
Date User Action Args
2022-04-11 14:59:27adminsetgithub: 83984
2020-03-01 21:26:46benjamin.petersonsetstatus: open -> closed

nosy: + benjamin.peterson
messages: + msg363097

resolution: fixed
stage: patch review -> resolved
2020-02-29 19:33:06petdancesetpull_requests: + pull_request18068
2020-02-29 19:29:14petdancesetpull_requests: - pull_request18067
2020-02-29 19:27:16petdancesetpull_requests: + pull_request18067
2020-02-29 19:25:50petdancesetpull_requests: - pull_request18066
2020-02-29 19:22:52petdancesetkeywords: + patch
stage: patch review
pull_requests: + pull_request18066
2020-02-29 19:19:39petdancecreate