closes bpo-39803: Remove unused str from _PyLong_FormatAdvancedWriter. (GH-18709)